--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ APP_SECRET=8fc0b002dbc4aadc3221a9565f3bf809
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://kuronana:Jessdu94!@127.0.0.1:3306/blogu
+DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
